[gd_scene load_steps=2 format=2]

[ext_resource path="res://client/game/mode/fugitive/hud/InGameMenuHud.gd" type="Script" id=3]

[node name="InGameMenuHud" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -222.0
margin_top = -50.0
margin_right = 223.0
margin_bottom = 97.0
popup_exclusive = true
window_title = "Menu"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
resumeButtonPath = NodePath("VBoxContainer/ResumeButton")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
margin_right = 429.0
margin_bottom = 37.0
text = "Resume Game"

[node name="HelpButton" type="Button" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 429.0
margin_bottom = 82.0
text = "Help"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 429.0
margin_bottom = 127.0
text = "Exit Game"
[connection signal="about_to_show" from="." to="." method="_on_InGameMenuHud_about_to_show"]
[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
